Creates dev_apache feature branch

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -38,3 +38,4 @@ puppet_enterprise::profile::orchestrator::java_args:
   Xmx: '64m'
   Xms: '64m'
   'XX:+UseG1GC': ''
+apache::servername: override
